# encheiridion

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: FastEPD.cpp.4F002849FCFAFCC7.idx  FastEPD.h.A9DD89B0A7107EA9.idx  FastEPD.inl.6C47961F2BB4A4FE.idx  Group5.cpp.0F55D3B8312215DC.idx  Group5.h.DB6A4B6C395D81D7.idx  arduino_io.inl.0B4A6CC90B4B70B7.idx  bb_ep_gfx.inl.592060CA42785C0E.idx  (+59 more)
components/buttons/: CMakeLists.txt  buttons.c
components/gt911/: CMakeLists.txt  gt911.c
components/miniz/: CMakeLists.txt  miniz.c  miniz.h
components/sdcard/: CMakeLists.txt  sdcard.c
main/: CMakeLists.txt  main#PreviousVersion-2026-04-16 04-56-15-587.cpp  main#PreviousVersion-2026-04-16 20-29-05-897.cpp  main#PreviousVersion-2026-04-25 14-08-46-721.cpp  main.cpp  sdkconfig.defaults
main/apps/: navigator.h  passage_data.c  passage_data.h
main/fonts/: font_manager.cpp  font_manager.h
main/reader/: CMakeLists.txt  epub_parser.cpp  epub_parser.h  webserver.cpp  webserver.h
main/reader/app/: r_navigator.cpp  r_navigator.h
main/scaife/: CMakeLists.txt  scaife_client#PreviousVersion-2026-04-16 05-17-04-676.cpp  scaife_client.cpp  scaife_client.h  xml_parser.cpp  xml_parser.h
main/scaife/app/: page_state.cpp  page_state.h  renderer.h  s_navigator.cpp  s_navigator.h
main/ui/: column.cpp  column.h  epd_update.cpp  epd_update.h  header.cpp  header.h  numpad.cpp  numpad.h  opus_picker#PreviousVersion-2026-05-16 11-00-18-983.cpp  opus_picker.cpp  opus_picker.h  touch_bus.cpp  touch_bus.h  ui_event.cpp  ui_event.h
resources/fonts/: futura15works.h  futura16.h  futura16works.h  futura20.h  futura25.h  futura32.h  futura48.h  orpheus16.h  orpheus_gk_basic.h  orpheus_gk_ext.h
resources/strings/: greek_encode.h
(+1 files in other folders)
