idf_component_register(
    SRCS
        "main.cpp"
        "fonts/font_manager.cpp"
        "ui/column.cpp"
        "ui/header.cpp"
        "ui/opus_picker.cpp"
        "ui/numpad.cpp"
        "ui/epd_update.cpp"
        "scaife/app/page_state.cpp"
    	"ui/touch_bus.cpp"
        "scaife/app/s_navigator.cpp"
        "ui/ui_event.cpp"
        "scaife/scaife_client.cpp"
        "scaife/xml_parser.cpp"
	"reader/webserver.cpp"
	"reader/epub_parser.cpp"
	"reader/app/r_navigator.cpp"
	"reader/app/page_state.cpp"
	"apps/launcher.cpp"
	"apps/passage_data.c"
    INCLUDE_DIRS
        "."
        "../resources"
        "../resources/fonts"
        "../resources/strings"
    REQUIRES
        FastEPD
        gt911
        buttons
	miniz
        esp_http_client
        esp_wifi
        nvs_flash
        esp_event
        esp_netif
        mbedtls
	esp_http_server
	fatfs
)
